src/objects/CommunityDiscussionArchive__c.object
<CustomObject>
    <fields>
        <fullName>Archive_Date_Time__c</fullName>
        <label>Archive Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archive_Reason__c</fullName>
        <label>Archive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Denied Party Restriction</fullName>
                </value>
                <value>
                    <fullName>Retired Product</fullName>
                </value>
                <value>
                    <fullName>Deprecated Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Community_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Created_Date__c</fullName>
        <label>Content Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeedTitle__c</fullName>
        <label>Feed Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Content__c</fullName>
        <label>Feed Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <description>This object is used to create a backup of the Feed comment records which have been deleted.</description>
    <label>Community Discussion Archive</label>
    <nameField>
        <label>Archived Community Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Discussion Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Discussion_Archives</fullName>
        <columns>NAME</columns>
        <columns>Content_Created_Date__c</columns>
        <columns>Archive_Date_Time__c</columns>
        <columns>Archive_Reason__c</columns>
        <columns>FeedTitle__c</columns>
        <columns>Feed_Content__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Archived Discussions</label>
    </listViews>
</CustomObject>